# _bzlmod_go_work

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.work  go.work.sum  test.sh
.github/workflows/: ci.yml
example/hello/: BUILD.bazel  MODULE.bazel  go.mod
example/hello/reverse/: BUILD.bazel  example_test.go  reverse_test.go
hello/: BUILD.bazel  MODULE.bazel  MODULE.bazel.old  go.mod  go.sum  hello.go  hello_test.go
