bazel_dep(name = "gazelle", version = "0.35.0")
git_override(
    module_name = "gazelle",
    remote = "https://github.com/stefanpenner/bazel-gazelle.git",
    commit = "86eb836b7e3dd9f7490acc6947eb73d6b142f04b"
)

# local_path_override(
#     module_name = "gazelle",
#     path = "/Users/spenner/src/bazelbuild/bazel-gazelle",
# )

bazel_dep(name = "rules_go", version = "0.44.1")


go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.20.3")


go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
use_repo(
    go_deps,
    "com_github_stretchr_testify",
    "tools_gotest_v3",
)
