load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    args = [
        "-go_naming_convention=import",
        "-go_naming_convention_external=import",
    ],
)

go_library(
    name = "hello_lib",
    srcs = ["hello.go"],
    importpath = "example.com/hello",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_example_hello//reverse"],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)
