load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello_lib",
    srcs = ["hello.go"],
    importpath = "example.com/hello",
    visibility = ["//visibility:private"],
    deps = ["//example/hello/reverse"],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)
