load("@rules_go//go:def.bzl", "go_library", "go_test")

alias(
    name = "gazelle",
    actual = "//:gazelle",
)

go_library(
    name = "reverse",
    srcs = [
        "int.go",
        "reverse.go",
    ],
    importpath = "golang.org/x/example/hello/reverse",
    visibility = ["//visibility:public"],
)

go_test(
    name = "reverse_test",
    srcs = [
        "example_test.go",
        "reverse_test.go",
    ],
    embed = [":reverse"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@tools_gotest_v3//assert",
    ],
)
